GNOME Bugzilla – Bug 656840
net load, fix logic to give a nice scale with bits
Last modified: 2011-11-11 10:03:55 UTC
Created attachment 194163 [details] [review] Patch to fix scaling on net load in bits mode. As it says in the code. Chart scaling is not good for bits mode. Patch attached.
I have tested the patch and it still applies, and fixes the problem pointed out, which has also been mentioned in bug 580471 comment 19, that is why I am confirming this bug, setting it's status to new.
Thanks. Patch applied in commit c3c986f6c888a274278a1e5a112befedc23abc6d.