Fixed logic for scaling net load when using bits.

Signed-off-by: Conor O'Gorman <conor@dna.ie>

https://bugzilla.gnome.org/show_bug.cgi?id=656840